# month_2_exam/api/api.go
@@ -18,6 +18,12 @@ func NewServer(h *handler.Handler) *gin.Engine {
 	r.PUT("/branch/:id", h.UpdateBranch)
 	r.DELETE("/branch/:id", h.DeleteBranch)
 
+	r.POST("/category", h.CreateCategory)
+	r.GET("/category/:id", h.GetByIDCategory)
+	r.GET("/category", h.GetListCategory)
+	r.PUT("/category/:id", h.UpdateCategory)
+	r.DELETE("/category/:id", h.DeleteCategory)
+
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 	return r
